2006-07-05  John Finlay  <finlay@moeraki.com>

	* gobject/pygiochannel.c (py_io_channel_init): Fix message typo.

2006-06-28  Cedric Gustin  <cedric.gustin@gmail.com>

	* dsextras.py (InstallData): Set datarootdir in .pc file.

	* pygobject_postinstall.py (replace_prefix): Do not parse
	pygtk-codegen-2.0 as it is part of pygtk.

	* setup.py: Create gobject extension as gobject._gobject. Add
	pygoptioncontext.c and pygoptiongroup.c to the list of source
	files. Add option.py to the module files. Changed name of
	distutils package from pygtk to pygobject.

2006-06-24  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/gobjectmodule.c (pyg_filename_from_utf8): Wrap
	g_filename_from_utf8.

	* tests/test_signal.py (TestClosures.testGString): Add unit test
	for signals using the type TYPE_GSTRING.

	* gobject/pygtype.c (pyg_value_as_pyobject)
	(pyg_value_from_pyobject): Implement conversion code for the type
	G_TYPE_GSTRING.

	* gobject/gobjectmodule.c (pyg_filename_display_basename)
	(pyg_filename_display_name): Add bindings for
	g_filename_display_basename and g_filename_display_name.
	(init_gobject): Add a TYPE_GSTRING definition.

	* gobject/pygobject.h,
	* gobject/pygobject-private.h: Make pyg_constant_strip_prefix
	receive and return const gchar*, to indicate it does not change
	the string.  Unfortunately since PyModule_AddIntConst is broken in
	python < 2.5 this introduces const warnings elsewhere :-(

	* gobject/gobjectmodule.c (pyg_flags_add_constants) 
	(pyg_enum_add_constants): Fix const warnings.

2006-06-23  John Finlay  <finlay@moeraki.com>

	* gobject/gobjectmodule.c (pyg_object_class_list_properties)
	(pyg_signal_list_ids, pyg_signal_lookup, pyg_signal_query): Add
	support for retrieving signal and propertie info from interface types.

2006-06-04  Johan Dahlin  <johan@gnome.org>

	* gobject/gobjectmodule.c (pyg_spawn_async)
	(pyg_signal_new): Fix two leaks in error cases, found by
	Coverity.

2006-05-28  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
